Implementing user login and segmenting user/admin registration